<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


    <!-- Project parent -->
    <parent>
        <groupId>fr.liglab.adele.icasa</groupId>
        <artifactId>parent</artifactId>
        <version>1.2.7-SNAPSHOT</version>
        <relativePath>../../../../parent</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>device.handler.test-2</artifactId>
    <name>Device Handler Test</name>


    <properties>
        <exam.version>3.0.0</exam.version>
        <url.version>1.5.2</url.version>
        <distrib.groupId>${project.groupId}</distrib.groupId>
        <distrib.artifactId>icasa.platform.handler.distribution</distrib.artifactId>
        <distrib.version>${project.version}</distrib.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>context.api</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.osgi</groupId>
                    <artifactId>org.osgi.core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>access.manager.api</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.osgi</groupId>
                    <artifactId>org.osgi.core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.felix</groupId>
            <artifactId>org.apache.felix.ipojo</artifactId>
        </dependency>




        <dependency>
            <groupId>fr.liglab.adele.icasa</groupId>
            <artifactId>test-handler-app-dp-1</artifactId>
            <version>${project.version}</version>
            <type>dp</type>
            <exclusions>
                <exclusion>
                    <groupId>org.osgi</groupId>
                    <artifactId>org.osgi.core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>


        <dependency>
            <groupId>fr.liglab.adele.icasa</groupId>
            <artifactId>device.dependency.handler</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.osgi</groupId>
                    <artifactId>org.osgi.core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Distribution to test -->
        <dependency>
            <groupId>${distrib.groupId}</groupId>
            <artifactId>${distrib.artifactId}</artifactId>
            <version>${distrib.version}</version>
            <type>osgi-distribution</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.5</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <type>jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>fr.liglab.adele.common</groupId>
            <artifactId>chameleon-runner</artifactId>
            <version>${DistributionTestVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.ow2.chameleon.testing</groupId>
            <artifactId>osgi-helpers</artifactId>
            <version>0.6.2</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>org.apache.felix.framework</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.ow2.chameleon</groupId>
                    <artifactId>chameleon-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.osgi</groupId>
                    <artifactId>org.osgi.core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.ops4j.pax.tinybundles</groupId>
                    <artifactId>tinybundles</artifactId>
                </exclusion>
                <!--
                   <exclusion>
                      <groupId>biz.aQute</groupId>
                      <artifactId>bndlib</artifactId>
                   </exclusion>
                   -->
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.ops4j.pax.url</groupId>
            <artifactId>pax-url-mvn</artifactId>
            <version>1.3.6</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
                    <systemPropertyVariables>
                        <ipojo.processing.synchronous>false</ipojo.processing.synchronous>
                        <org.osgi.framework.bootdelegation>sun.*</org.osgi.framework.bootdelegation>
                        <felix.bootdelegation.implicit>false</felix.bootdelegation.implicit>
                        <applications.test.version>${project.version}</applications.test.version>
                        <icasa.disable.access.policy>true</icasa.disable.access.policy>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-distrib</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeGroupIds>${distrib.groupId}</includeGroupIds>
                            <includeArtifactIds>${distrib.artifactId}</includeArtifactIds>
                            <outputDirectory>${project.build.directory}/distribution</outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-deps</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.ow2.chameleon.testing</groupId>
                                    <artifactId>osgi-helpers</artifactId>
                                    <outputDirectory>${project.build.directory}/distribution/${distrib.artifactId}/runtime</outputDirectory>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.mockito</groupId>
                                    <artifactId>mockito-all</artifactId>
                                    <outputDirectory>${project.build.directory}/distribution/${distrib.artifactId}/runtime</outputDirectory>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.ops4j.pax.url</groupId>
                                    <artifactId>pax-url-mvn</artifactId>
                                    <outputDirectory>${project.build.directory}/distribution/${distrib.artifactId}/core</outputDirectory>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>fr.liglab.adele.icasa</groupId>
                                    <artifactId>test-handler-app-dp-1</artifactId>
                                    <type>dp</type>
                                    <outputDirectory>${project.build.directory}/distribution/${distrib.artifactId}/runtime</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>conf</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>